# zotero-mcp

./: LICENSE  README.md  hello.py  pyproject.toml  server.py
.github/workflows/: python-package.yml
src/zotero_mcp/: __init__.py  cli.py  client.py
tests/: __init__.py  conftest.py  test_item_operations.py  test_search.py
