[project]
name = "zotero-mcp"
version = "0.1.0"
description = "Model Context Protocol server for Zotero"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.2.0",
    "python-dotenv>=1.0.1",
    "pyzotero>=1.6.8",
]

[tool.uv.sources]
# TODO: Switch back to official releases after this fix is available:
# https://github.com/modelcontextprotocol/python-sdk/issues/129
mcp = { git = "https://github.com/modelcontextprotocol/python-sdk" }

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
